# transformer-flu-forecasting

./: LICENSE  README.md  pyproject.toml  transformer-forecast-demo.ipynb
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=99-step=5000.ckpt
lightning_logs/version_1/: metrics.csv
lightning_logs/version_1/checkpoints/: epoch=96-step=4850.ckpt
lightning_logs/version_2/: hparams.yaml  metrics.csv
lightning_logs/version_2/checkpoints/: epoch=99-step=5000.ckpt
lightning_logs/version_3/: metrics.csv
lightning_logs/version_3/checkpoints/: epoch=9-step=500.ckpt
lightning_logs/version_4/: metrics.csv
lightning_logs/version_4/checkpoints/: epoch=99-step=5000.ckpt
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_5/checkpoints/: epoch=94-step=4750.ckpt
requirements/: requirements.txt
